--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.17.0",
+    "@reduxjs/toolkit": "^1.9.0",
+    "postcss": "^8.4.19",
     "prettier-stylelint": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "sass": "^1.56.1",
     "stylelint": "^14.15.0",
     "stylelint-config-standard-scss": "^6.1.0",
-    "stylelint-order": "^5.0.0"
+    "stylelint-order": "^5.0.0",
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
