--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_KEY=AIzaSyBw9B9xOogpS88H8cxOa2t4zb1Mto0Ruc0
-VITE_BACKEND_URI=ip
+VITE_API_KEY=AIzaSyBMEmDo0qRK1qeKuJsrVq190-S5XXqRuYQ
+VITE_BACKEND_URI=https://competition-app.herokuapp.com/api/ecoservice
