--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
   },
   "rules": {
     "import/prefer-default-export": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "jsx-a11y/no-static-element-interactions": "off"
   },
   "ignorePatterns": ["postcss.config.ts", "tailwind.config.ts"]
 }
