--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,10 @@
 {
   "extends": ["airbnb", "airbnb-typescript"],
+  "env": {
+    "es6": true,
+    "node": true
+  },
+  "files": ["*.js", "*.ts", "*.tsx"],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
@@ -8,6 +13,5 @@
     "no-param-reassign": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off"
-  },
-  "ignorePatterns": ["postcss.config.ts", "tailwind.config.ts"]
+  }
 }
