--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "stylelint": "^14.15.0",
     "stylelint-config-standard-scss": "^6.1.0",
