Provided backend link & mapped all services on the map

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_KEY=AIzaSyBMEmDo0qRK1qeKuJsrVq190-S5XXqRuYQ
-VITE_BACKEND_URL=https://competition-app.herokuapp.com/api/ecoservice
+VITE_BACKEND_URL=http://localhost:8080/api/ecoservice
 VITE_GEOCODING_URL=https://maps.googleapis.com/maps/api/geocode/json
