--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,11 @@
     "es6": true,
     "node": true
   },
-  "files": ["*.js", "*.ts", "*.tsx"],
+  "overrides": [
+    {
+      "files": ["*.js", "*.ts", "*.tsx"]
+    }
+  ],
   "parserOptions": {
     "project": "./tsconfig.json"
   },
