--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_API_KEY=AIzaSyBMEmDo0qRK1qeKuJsrVq190-S5XXqRuYQ
-VITE_BACKEND_URL=http://localhost:8080/api/ecoservice
+VITE_BACKEND_URL=https://82.118.230.200:8080/api/ecoservice
 VITE_GEOCODING_URL=https://maps.googleapis.com/maps/api/geocode/json
