--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.17.0",
-    "@reduxjs/toolkit": "^1.9.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.2.0",
     "postcss": "^8.4.19",
     "prettier-stylelint": "^0.4.2",
     "react": "^18.2.0",
