--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "stylelint": "^14.15.0",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^5.0.0",
+    "swiper": "^8.4.5",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "use-places-autocomplete": "^4.0.0",
