--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.16",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/uuid": "^8.3.4",
@@ -18,6 +22,7 @@
     "prettier-stylelint": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-toastify": "^9.1.1",
@@ -29,11 +34,7 @@
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "use-places-autocomplete": "^4.0.0",
-    "uuid": "^9.0.0",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
