--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@types/uuid": "^8.3.4",
@@ -22,6 +23,7 @@
     "prettier-stylelint": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
