--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_KEY=AIzaSyBMEmDo0qRK1qeKuJsrVq190-S5XXqRuYQ
 VITE_BACKEND_URL=https://82.118.230.200:8080/api/ecoservice
+VITE_BACKEND_AUTH_URL=https://82.118.230.200:8080/api/auth
 VITE_BACKEND_LOCAL_URL=http://localhost:8080/api/ecoservice
 VITE_GEOCODING_URL=https://maps.googleapis.com/maps/api/geocode/json
