--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "@types/uuid": "^8.3.4",
     "axios": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "postcss": "^8.4.19",
     "prettier-stylelint": "^0.4.2",
     "react": "^18.2.0",
