--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.17.0",
     "@reduxjs/toolkit": "^1.9.1",
@@ -28,6 +26,7 @@
     "react-lazy-load-image-component": "^1.5.6",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
+    "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.56.1",
     "stylelint": "^14.15.0",
