Added production build v1.0.2

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_API_KEY=AIzaSyDP0GGkicksBkdIjx0Iu51LpioS6ifRn5s
-VITE_BACKEND_URL=https://82.118.230.200:8080/api/ecoservice
-VITE_BACKEND_AUTH_URL=https://82.118.230.200:8080/api/auth
+VITE_BACKEND_URL=http://176.126.78.61:8080/api/ecoservice
+VITE_BACKEND_AUTH_URL=http://176.126.78.61:8080/api/auth
 VITE_BACKEND_LOCAL_URL=http://localhost:8080/api/ecoservice
 VITE_GEOCODING_URL=https://maps.googleapis.com/maps/api/geocode/json
