--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,16 @@ jobs:
   deploy_app:
     runs-on: ubuntu-latest
     steps:
-      - run : npm i
+      - name: 'Checkout repository'
+        uses: actions/checkout@v3
+
+      - name: 'Use Node.js v${{ matrix.node-version }}'
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run : npm i --force
         shell: bash
-      - run : npm ci
+      - run : npm ci --force
         shell: bash
       - run: |
           touch .env
